--- a/02-Data_analysis_fundamentals/01-Data-Cleaning/01-Missing_values.ipynb
+++ b/02-Data_analysis_fundamentals/01-Data-Cleaning/01-Missing_values.ipynb
@@ -35,11 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -51,8 +47,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
